--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "async": "^2.6.0",
         "moment": "^2.22.1",
-        "mssql": "^5.0.5"
+        "mssql": "^5.0.5",
+        "mysql": "^2.17.1"
     }
 }
