--- a/package.json
+++ b/package.json
@@ -1,31 +1,40 @@
 {
-    "name": "dal-helper",
-    "version": "1.2.4",
-    "description": "数据访问层",
-    "main": "dalHelper.js",
-    "scripts": {
-        "test": "node ./test/test.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/mrliuc/dal-helper.git"
-    },
-    "keywords": [
-        "mssql",
-        "dal",
-        "orm"
-    ],
-    "author": "mrliuc@qq.com",
-    "readmeFilename": "README.md",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/mrliuc/dal-helper/issues"
-    },
-    "homepage": "https://github.com/mrliuc/dal-helper#readme",
-    "dependencies": {
-        "async": "^2.6.0",
-        "moment": "^2.22.1",
-        "mssql": "^5.0.5",
-        "mysql": "^2.17.1"
-    }
+  "name": "dal-helper",
+  "version": "1.3.1",
+  "description": "数据访问层",
+  "main": "dalHelper.js",
+  "scripts": {
+    "test-mssql": "./node_modules/.bin/mocha ./test/mssql/test",
+    "test-mysql": "./node_modules/.bin/mocha ./test/mysql/test",
+    "test":"npm run test-mssql & npm run test-mysql"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mrliuc/dal-helper.git"
+  },
+  "keywords": [
+    "mssql",
+    "dal",
+    "orm"
+  ],
+  "author": "mrliuc@qq.com",
+  "readmeFilename": "README.md",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mrliuc/dal-helper/issues"
+  },
+  "homepage": "https://github.com/mrliuc/dal-helper#readme",
+  "dependencies": {
+    "async": "^2.6.0",
+    "moment": "^2.22.1",
+    "mssql": "^6.0.1",
+    "mysql": "^2.17.1",
+    "tedious": "^8.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.0",
+    "mocha": "^7.0.0"
+  }
 }
