--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "dal-helper",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "数据访问层",
   "main": "dalHelper.js",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint lib",
     "test-mssql": "./node_modules/.bin/mocha ./test/mssql/test",
     "test-mysql": "./node_modules/.bin/mocha ./test/mysql/test",
     "test": "./node_modules/.bin/mocha ./test/mssql/test ./test/mysql/test"
@@ -35,6 +36,6 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0",
-    "mocha": "^7.0.0"
+    "mocha": "^7.1.0"
   }
 }
