--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "dal-helper",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "description": "数据访问层",
   "main": "dalHelper.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint lib",
+    "lint": "./node_modules/.bin/eslint lib --fix",
     "test-mssql": "./node_modules/.bin/mocha ./test/mssql/test",
     "test-mysql": "./node_modules/.bin/mocha ./test/mysql/test",
+    "test-mysql-sql": "./node_modules/.bin/mocha ./test/mysql/test_sql",
     "test": "./node_modules/.bin/mocha ./test/mssql/test ./test/mysql/test"
   },
   "repository": {
