--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dal-helper",
-  "version": "1.3.6",
+  "version": "1.3.7",
   "description": "数据访问层",
   "main": "dalHelper.js",
   "scripts": {
@@ -8,6 +8,7 @@
     "test-mssql": "./node_modules/.bin/mocha ./test/mssql/test",
     "test-mysql": "./node_modules/.bin/mocha ./test/mysql/test",
     "test-mysql-sql": "./node_modules/.bin/mocha ./test/mysql/test_sql",
+    "test-mysql-affected": "./node_modules/.bin/mocha ./test/mysql/test_affected",
     "test": "./node_modules/.bin/mocha ./test/mssql/test ./test/mysql/test"
   },
   "repository": {
